# Hybrid_Drone

./: .gitignore  README.md
Hybrid_Bridge_ESP32/: platformio.ini
Hybrid_Bridge_ESP32/src/: main.cpp
Hybrid_Drone_OS/: CMakeLists.txt  STM32F411CEUx_FLASH.ld  startup_stm32f411ceux.s
Hybrid_Drone_OS/Drivers/cmsis_core/: README.md
Hybrid_Drone_OS/Drivers/mpu6050/: mpu6050.c  mpu6050.h
Hybrid_Drone_OS/inc/: clock.h  i2c.h  imu_filter.h  main.h  mixer.h  pid.h  pwm.h  uart.h
Hybrid_Drone_OS/src/: clock.c  i2c.c  imu_filter.c  main.c  mixer.c  pid.c  pwm.c  uart.c
docs/: Complementary_Filter.md
matlab/: calibracion_mpu6050.asv  calibracion_mpu6050.m  discretizacion.slx  discretizacion_tustin.m  filtro_complementario.asv  intuicion_pid.m  movimiento.csv  reposo.csv  simulacion_planta.m  validacion_0,95.csv  validacion_0,98.csv  validacion_filtro.m
tests/: ground_station.py
